add: meta description

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <meta
+      name="description"
+      content="Ousar é fazer - Temos o desejo de fazer com que o Grêmio Estudantil volte a ser ativo, servindo de guia e dando apoio para cada estudante do IFPAR. "
+    />
     <title>Morale</title>
   </head>
   <body>
